tests/custom/STARIS_2022/operation-type-errors/powerSet-type-error/stderr.expected
Error:
    powerSet-type-error.essence:2:15:
  |
2 | such that s = powerSet(2)
  |               ^^^^^^^^^^^
Type error:
	Expected: set of int
	Got: set of set of ?

powerSet-type-error.essence:2:24:
  |
2 | such that s = powerSet(2)
  |                        ^
Type error:
	Expected: set of ?
	Got: int

cat: *.solution: No such file or directory
